--- a/git/config
+++ b/git/config
@@ -11,9 +11,11 @@
 
 [alias]
 	upstream = "!f() { git push --set-upstream origin $(git rev-parse --abbrev-ref HEAD); }; f"
+
   cam = "!f() { git add . && git commit -m \"$1\"; }; f"
 	rb = "!f() { git rebase -i HEAD~$1 --autostash; }; f"
 	co  = "!f() { git checkout $(git branch | fzf --height 40% --reverse); }; f"
+  cb = "!f() { git checkout -b \"$1\"; }; f"
 
   com = "checkout master"
 	blr = "branch --list --remotes"
