--- a/git/config
+++ b/git/config
@@ -25,7 +25,7 @@
   blr = "branch --list --remotes"
   prs = "pull --rebase --autostash"
 
-  wip = "for-each-ref --sort='authordate:iso8601' --format=' %(color:green)%(authordate:relative)%09%(color:white)%(refname:short)' refs/heads"
+  bs = "for-each-ref --sort='authordate:iso8601' --format=' %(color:green)%(authordate:relative)%09%(color:white)%(refname:short)' refs/heads"
 
   rubocop = "!f() { git status --porcelain | sed s/^...// | xargs bundle exec rubocop; }; f"
 
