--- a/git/config
+++ b/git/config
@@ -32,3 +32,13 @@
 
 [diff "rspec"]
   xfuncname = "^[ \t]*((RSpec|describe|context|it|before|after|feature|scenario|background)[ \t].*)$"
+
+[merge "merge-structure-sql"]
+  name = Rails structure.sql merge driver
+  driver = git-merge-structure-sql %A %O %B
+
+[filter "lfs"]
+  clean = git-lfs clean -- %f
+  smudge = git-lfs smudge -- %f
+  process = git-lfs filter-process
+  required = true
