--- a/dash/Dash.dashsync/Preferences.plist
+++ b/dash/Dash.dashsync/Preferences.plist
@@ -9,7 +9,7 @@
 			<key>HTTP_Status_Codes_Rails</key>
 			<dict>
 				<key>date</key>
-				<date>2021-07-23T09:06:19Z</date>
+				<date>2021-08-02T11:10:49Z</date>
 				<key>entry</key>
 				<dict>
 					<key>aliases</key>
@@ -30,7 +30,7 @@
 			<key>PostgreSQL_CLI</key>
 			<dict>
 				<key>date</key>
-				<date>2021-07-23T09:06:19Z</date>
+				<date>2021-08-02T11:10:49Z</date>
 				<key>entry</key>
 				<dict>
 					<key>aliases</key>
@@ -46,7 +46,7 @@
 			<key>RSpec_Expectations</key>
 			<dict>
 				<key>date</key>
-				<date>2021-07-23T09:06:19Z</date>
+				<date>2021-08-02T11:10:48Z</date>
 				<key>entry</key>
 				<dict>
 					<key>aliases</key>
@@ -64,7 +64,7 @@
 			<key>Rails_Migrations_CLI</key>
 			<dict>
 				<key>date</key>
-				<date>2021-07-23T09:06:19Z</date>
+				<date>2021-08-02T11:10:50Z</date>
 				<key>entry</key>
 				<dict>
 					<key>aliases</key>
@@ -83,7 +83,7 @@
 			<key>Rails_i18n</key>
 			<dict>
 				<key>date</key>
-				<date>2021-07-23T09:06:20Z</date>
+				<date>2021-08-02T11:10:47Z</date>
 				<key>entry</key>
 				<dict>
 					<key>aliases</key>
@@ -102,7 +102,7 @@
 			<key>Ruby_strftime</key>
 			<dict>
 				<key>date</key>
-				<date>2021-07-23T09:06:20Z</date>
+				<date>2021-08-02T11:10:50Z</date>
 				<key>entry</key>
 				<dict>
 					<key>aliases</key>
@@ -118,7 +118,7 @@
 			<key>Semantic_Commits</key>
 			<dict>
 				<key>date</key>
-				<date>2021-07-23T09:06:19Z</date>
+				<date>2021-08-02T11:10:48Z</date>
 				<key>entry</key>
 				<dict>
 					<key>aliases</key>
@@ -136,7 +136,7 @@
 			<key>Unix_File_Permissions</key>
 			<dict>
 				<key>date</key>
-				<date>2021-07-23T09:06:18Z</date>
+				<date>2021-08-02T11:10:47Z</date>
 				<key>entry</key>
 				<dict>
 					<key>aliases</key>
@@ -546,7 +546,7 @@
 			<key>rspec-core</key>
 			<dict>
 				<key>date</key>
-				<date>2021-07-23T09:07:09Z</date>
+				<date>2021-08-02T11:12:02Z</date>
 				<key>entry</key>
 				<dict>
 					<key>name</key>
@@ -560,7 +560,7 @@
 			<key>rspec-expectations</key>
 			<dict>
 				<key>date</key>
-				<date>2021-07-23T09:07:10Z</date>
+				<date>2021-08-02T11:12:01Z</date>
 				<key>entry</key>
 				<dict>
 					<key>name</key>
@@ -574,7 +574,7 @@
 			<key>sidekiq</key>
 			<dict>
 				<key>date</key>
-				<date>2021-07-23T09:07:09Z</date>
+				<date>2021-08-02T11:12:02Z</date>
 				<key>entry</key>
 				<dict>
 					<key>name</key>
@@ -695,7 +695,7 @@
 			<key>CanIUse</key>
 			<dict>
 				<key>date</key>
-				<date>2021-07-23T09:06:24Z</date>
+				<date>2021-08-02T11:12:33Z</date>
 				<key>entry</key>
 				<dict>
 					<key>aliases</key>
@@ -719,7 +719,7 @@
 			<key>HTTP</key>
 			<dict>
 				<key>date</key>
-				<date>2021-07-23T09:13:19Z</date>
+				<date>2021-08-02T11:12:56Z</date>
 				<key>entry</key>
 				<dict>
 					<key>authorLinkHref</key>
@@ -737,7 +737,7 @@
 			<key>Hammerspoon</key>
 			<dict>
 				<key>date</key>
-				<date>2021-07-23T09:06:28Z</date>
+				<date>2021-08-02T11:12:33Z</date>
 				<key>entry</key>
 				<dict>
 					<key>aliases</key>
@@ -757,7 +757,7 @@
 			<key>Neovim</key>
 			<dict>
 				<key>date</key>
-				<date>2021-07-23T09:06:36Z</date>
+				<date>2021-08-02T11:12:33Z</date>
 				<key>entry</key>
 				<dict>
 					<key>aliases</key>
@@ -779,7 +779,7 @@
 			<key>jq</key>
 			<dict>
 				<key>date</key>
-				<date>2021-07-23T09:06:32Z</date>
+				<date>2021-08-02T11:12:33Z</date>
 				<key>entry</key>
 				<dict>
 					<key>authorLinkHref</key>
@@ -797,7 +797,7 @@
 			<key>tldr</key>
 			<dict>
 				<key>date</key>
-				<date>2021-07-23T09:06:32Z</date>
+				<date>2021-08-02T11:12:33Z</date>
 				<key>entry</key>
 				<dict>
 					<key>aliases</key>
@@ -1017,6 +1017,8 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>DHWKWebViewTextSizeMultiplier</key>
+	<real>1.1499998569488525</real>
 	<key>actuallyDarkWebView</key>
 	<false/>
 	<key>bookmarks</key>
@@ -1042,17 +1044,17 @@
 			<key>http://kapeli.com/feeds/JavaScript.xml</key>
 			<dict>
 				<key>date</key>
-				<date>2021-04-14T07:45:04Z</date>
+				<date>2021-08-02T11:14:32Z</date>
 			</dict>
 			<key>http://kapeli.com/feeds/Ruby_3.xml</key>
 			<dict>
 				<key>date</key>
-				<date>2021-02-11T09:27:36Z</date>
+				<date>2021-08-02T11:12:49Z</date>
 			</dict>
 			<key>http://kapeli.com/feeds/Ruby_on_Rails_6.xml</key>
 			<dict>
 				<key>date</key>
-				<date>2021-07-23T09:11:04Z</date>
+				<date>2021-08-02T11:12:33Z</date>
 			</dict>
 		</dict>
 		<key>uninstalled</key>
@@ -1219,7 +1221,7 @@
 				<key>3.34.0</key>
 				<dict>
 					<key>date</key>
-					<date>2021-07-23T09:07:14Z</date>
+					<date>2021-08-02T11:12:05Z</date>
 					<key>entry</key>
 					<dict>
 						<key>name</key>
@@ -1236,7 +1238,7 @@
 				<key>4.0.2</key>
 				<dict>
 					<key>date</key>
-					<date>2021-07-23T09:07:08Z</date>
+					<date>2021-08-02T11:12:00Z</date>
 					<key>entry</key>
 					<dict>
 						<key>name</key>
@@ -1282,7 +1284,7 @@
 				<key>3.20</key>
 				<dict>
 					<key>date</key>
-					<date>2021-07-23T09:11:29Z</date>
+					<date>2021-08-02T11:12:32Z</date>
 				</dict>
 			</dict>
 			<key>http://kapeli.com/feeds/Ruby_2.xml</key>
@@ -1290,15 +1292,20 @@
 				<key>2.7.2</key>
 				<dict>
 					<key>date</key>
-					<date>2021-07-23T09:12:13Z</date>
+					<date>2021-08-02T11:12:42Z</date>
 				</dict>
 			</dict>
 			<key>http://kapeli.com/feeds/Ruby_on_Rails_5.xml</key>
 			<dict>
+				<key>5.0.2</key>
+				<dict>
+					<key>date</key>
+					<date>2021-08-05T10:15:42Z</date>
+				</dict>
 				<key>5.2.4</key>
 				<dict>
 					<key>date</key>
-					<date>2021-07-23T09:07:44Z</date>
+					<date>2021-08-02T11:12:33Z</date>
 				</dict>
 			</dict>
 			<key>http://kapeli.com/feeds/Ruby_on_Rails_6.xml</key>
