--- a/git/config
+++ b/git/config
@@ -6,6 +6,7 @@
   editor = nvim
   commentChar = ";"
   attributesfile = /Users/ogirginc/.config/git/attributes
+  excludesfile = /Users/ogirginc/.gitignore_global
   ; core.excludesfile is not needed as $XDG_CONFIG_HOME is defined which forces
   ; Git to use it's default value, $XDG_CONFIG_HOME/git/ignore.
   ; excludesfile = $HOME/Configurations/git/ignore
