--- a/git/config
+++ b/git/config
@@ -16,6 +16,7 @@
 
 [alias]
   upstream = "!f() { git push --set-upstream origin $(git rev-parse --abbrev-ref HEAD); }; f"
+  unrestore = "restore --staged ."
 
   cam = "!f() { git add . && git commit -m \"$1\"; }; f"
   wip = "!f() { git add . && git commit -m "WIP"; }; f"
