--- a/git/config
+++ b/git/config
@@ -50,4 +50,10 @@
   required = true
 
 [mergetool "vimdiff"]
-	path = nvim
+  path = nvim
+[difftool "sourcetree"]
+  cmd = opendiff \"$LOCAL\" \"$REMOTE\"
+  path = 
+[mergetool "sourcetree"]
+  cmd = /Applications/Sourcetree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
+  trustExitCode = true
