--- a/git/config
+++ b/git/config
@@ -34,7 +34,17 @@
 
   bs = "for-each-ref --sort='authordate:iso8601' --format=' %(color:green)%(authordate:relative)%09%(color:white)%(refname:short)' refs/heads"
 
-  rubocop = "!f() { git status --porcelain | sed s/^...// | xargs bundle exec rubocop; }; f"
+  rubocop = "!f() { git diff --name-only | sed s/^...// | xargs bundle exec rubocop; }; f"
+  rubocop-autofix = "!f() { git diff --name-only | xargs bundle exec rubocop -a; }; f"
+  rubocop-staged = "!f() { git diff --name-only --cached | xargs bundle exec rubocop; }; f"
+  rubocop-staged-autofix = "!f() { git diff --name-only --cached | xargs bundle exec rubocop -a; }; f"
+
+  rspec = "!f() { git status --porcelain | sed s/^...// | xargs bundle exec rspec; }; f"
+  rspec-staged = "!f() { git diff --name-only --cached | xargs bundle exec rspec; }; f"
+
+  staged-rspec = "!f() { git rspec-staged; }; f"
+  staged-rubocop = "!f() { git rubocop-staged; }; f"
+  staged-rr = "!f() { git staged-rubocop && git staged-rspec; }; f"
 
 [diff "rspec"]
   xfuncname = "^[ \t]*((RSpec|describe|context|it|before|after|feature|scenario|background)[ \t].*)$"
