--- a/git/config
+++ b/git/config
@@ -23,7 +23,8 @@
   wip = "!f() { git add . && git commit -m "WIP"; }; f"
 
   rb = "!f() { git rebase -i HEAD~$1 --autostash; }; f"
-  sb = "!f() { git switch $(git branch -a | fzf --height 20% --reverse --border); }; f"
+  sb = "!f() { git switch $(git branch | fzf --height 40% --reverse --border); }; f"
+  sbr = "!f() { git switch -t $(git branch -r | fzf --height 40% --reverse --border); }; f"
   co  = "!f() { git checkout $(git branch | fzf --height 40% --reverse); }; f"
   cb = "!f() { git checkout -b \"$1\"; }; f"
 
