--- a/git/config
+++ b/git/config
@@ -23,6 +23,7 @@
   wip = "!f() { git add . && git commit -m "WIP" --no-verify; }; f"
 
   rb = "!f() { git rebase -i HEAD~$1 --autostash; }; f"
+  ssb = "!f() { git add . && git stash && git switch $(git branch | fzf --height 40% --reverse --border) && git stash pop; }; f"
   sb = "!f() { git switch $(git branch | fzf --height 40% --reverse --border); }; f"
   sbr = "!f() { git switch -t $(git branch -r | fzf --height 40% --reverse --border); }; f"
   co  = "!f() { git checkout $(git branch | fzf --height 40% --reverse); }; f"
