Change master to main

--- a/git/config
+++ b/git/config
@@ -33,7 +33,7 @@
   co  = "!f() { git checkout $(git branch | fzf --height 40% --reverse); }; f"
   cb = "!f() { git checkout -b \"$1\"; }; f"
 
-  sm = "switch master"
+  sm = "switch main"
   bd = "!f() { git branch -d \"$1\"; }; f"
   lb = "branch --list"
   lbr = "branch --list --remotes"
