--- a/git/config
+++ b/git/config
@@ -28,6 +28,8 @@
   rb = "!f() { git rebase -i HEAD~$1 --autostash; }; f"
 
   sm = "switch main"
+  smn = "switch main"
+  smr = "switch master"
   ssm = "!f() { git add . && git stash && git switch main && git stash pop; }; f"
   sb = "!f() { git switch $(git branch | fzf --height 40% --reverse --border); }; f"
   sbr = "!f() { git switch -t $(git branch -r | fzf --height 40% --reverse --border); }; f"
