--- a/git/config
+++ b/git/config
@@ -27,18 +27,11 @@
 
   rb = "!f() { git rebase -i HEAD~$1 --autostash; }; f"
 
-  sms = "switch master"
-  ssmr = "!f() { git add . && git stash && git switch master && git stash pop; }; f"
-
-  sm  = "switch main"
-  ssm  = "!f() { git add . && git stash && git switch main && git stash pop; }; f"
-  ssmn = "!f() { git add . && git stash && git switch main && git stash pop; }; f"
-
   sb   = "!f() { git switch $(git branch | fzf --height 40% --reverse --border); }; f"
   sbr  = "!f() { git switch -t $(git branch -r | fzf --height 40% --reverse --border); }; f"
 
   ssb  = "!f() { git add . && git stash && git switch $(git branch | fzf --height 40% --reverse --border) && git stash pop; }; f"
-  ssbr = "!f() { git add . && git stash && git switch -t $(git branch -r | fzf --height 40% --reverse --border); }; f"
+  ssbr = "!f() { git add . && git stash && git switch -t $(git branch -r | fzf --height 40% --reverse --border) && git stash pop; }; f"
 
   bd = "!f() { git branch -d \"$1\"; }; f"
   lb = "branch --list"
